--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
+        <title>Blog</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         
+        
+        <!-- Medium Style Editor.Source - https://github.com/yabwe/medium-editor-->
+        <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+
+        <!-- Custom CSS-->
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Russo+One&display=swap" rel="stylesheet">
+        
+    </head>
+    <body class="loader">
+        <nav class="navbar navbar-expand-lg techfont custom-navbar"> 
+            <div class="container">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url post_list %}" class="navbar-brand bigbrand">My Blog</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="https://www.github.com">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+                </ul>
+
+                <ul class="nav justify-content-end">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item"><a href="{% url 'post_new' %}" class="nav-link">New Post</a></li>
+                    <li class="nav-item"><a href="{% url 'post_draft_list' %}" class="nav-link">Drafts</a></li>
+                    <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">Log Out</a></li>
+                    <li class="nav-item"><a>Welcome: {{user.username}}</a></li>
+                    {% else %}
+                    <li class="nav-item"><a href="{% url 'login' %}" class="nav-link"><span class="glyphicon glyphicon-user"></span></a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="blog_posts">
+                        {% block content %}
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
