--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -12,10 +12,10 @@
 <p class="postcontent">{{ post.title|safe|linebreaksbr }}</p>
 {% if user.is_authenticated %}
 <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk %}">
-    <span class="glyphicon glyphicon-pencil"></span>
+    <i class="fas fa-pencil-alt"></i>
 </a>
 <a class="btn btn-primary" href="{% url 'post_remove' pk=post.pk %}">
-    <span class="glyphicon glyphicon-remove"></span>
+    <i class="fas fa-trash-alt"></i>
 </a>
 {% endif %}
 <hr>
@@ -27,10 +27,10 @@
     {{ comment.created_date }}
         {% if not comment.approved_comment %}
         <a class="btn btn-secondary" href="{% url 'comment_remove' pk=comment.pk %}">
-            <span class="glyphicon glyphicon-remove"></span>
+            <i class="fas fa-trash-alt"></i>
         </a>
         <a class="btn btn-primary" href="{% url 'comment_approve' pk=comment.pk %}">
-            <span class="glyphicon glyphicon-ok"></span>
+            <i class="fas fa-check"></i>
         </a>
         {% endif %}
 
